updated this file

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
             <div class="guess">
                 <div class="score">score: <span class="scoreValue">0</span></div>
                <div class="lifes">
-                <img src="images/heart-fill.png" alt="">
-                <img src="images/heart-fill.png" alt="">
-                <img src="images/heart-fill.png" alt="">
-                <img src="images/heart-fill.png" alt="">
-                <img src="images/heart-fill.png" alt="">
+                <img class="life" src="images/heart-fill.png" alt="">
+                <img class="life" src="images/heart-fill.png" alt="">
+                <img class="life" src="images/heart-fill.png" alt="">
+                <img class="life" src="images/heart-fill.png" alt="">
+                <img class="life" src="images/heart-fill.png" alt="">
                </div>
             </div>
             <div class="question_answer">
